amq-broker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-broker
spec:
  ports:
    - port: 61616
      targetPort: 61616
  selector:
    app: amq-broker
