amq-broker/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-broker
  labels:
    app: amq-broker
spec:
  host: amq-broker-rhel8-amq.apps.cluster-n2dhk.dynamic.redhatworkshops.io
  to:
    kind: Service
    name: amq-broker-rhel8
    weight: 100
  port:
    targetPort: 8161-tcp
  wildcardPolicy: None
